2011-09-16  Albert Chu <chu11@llnl.gov>

	* ipmipower/ipmipower.conf.5.pre.in,
	ipmiconsole/ipmiconsole.conf.5.pre.in: Remove files.

	* ipmipower/ipmipower.conf.5, ipmiconsole/ipmiconsole.conf.5: New
	files.

	* configure.ac, ipmipower/Makefile.am, ipmiconsole/Makefile.am:
	Adjust.
	
2011-09-15  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/, libfreeipmi/src/sensor-read/,
	libfreeipmi/include/freeipmi/sensor-read/,
	common/src/parsecommon/: Support new "assumebmcowner" workaround.
	
2011-09-15  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors.8.pre.in: Fix some text.  Remove
	experimental tag from --bridge-sensors option.

	* libfreeipmi/src/sensor-read/ipmi-sensor-read.c: Add comments on
	workaround needs.
	
2011-09-15  Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/: Support IGNORE_SCANNING_DISABLED workaround.
	
2011-09-15  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors.8.pre.in: Update motherboards
	workaround may work on.
	
2011-09-14  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/debug/ipmi-debug.c (ipmi_dump_hex): Output
	correct byte length of hex array.

	* libfreeipmi/src/api/ipmi-api.c (ipmi_cmd_raw): Fix debug dump
	output corner case.

	* libfreeipmi/src/api/ipmi-api.c (ipmi_cmd_raw_ipmb): Add debug
	dump support for special case drivers.
	
2011-09-13  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Do not poll stdin when operating in non-interactive
	mode.
	
2011-09-13  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/interpret/: Support cooling device redundancy
	interpretation.

	* man/: Update manpages for new interpret configuration options.
	
2011-09-12  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/interpret/: Support transition severity
	sensor/sel interpretations for temperature, voltage, fan, and
	power supply sensor types.

2011-09-07  Diego Elio Pettenò <flameeyes@flameeyes.eu>

	* bmc-watchdog/src/bmc-watchdog.c: By writing a pidfile, init
	scripts can rely on that to kill or signal the running daemon