@@ -191,6 +191,7 @@ extern "C" {
 #define __IPMI_SUPERMICRO_PRODUCT_ID_X9SC      1572
 #define IPMI_SUPERMICRO_PRODUCT_ID_X9SCL       __IPMI_SUPERMICRO_PRODUCT_ID_X9SC
 #define IPMI_SUPERMICRO_PRODUCT_ID_X9SCM       __IPMI_SUPERMICRO_PRODUCT_ID_X9SC
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTNPLUS_F 1551
 
 #ifdef __cplusplus
 }
