@@ -1,3 +1,7 @@
+2011-09-19  Albert Chu <chu11@llnl.gov>
+
+	* Support Supermicro X8DTN+-F OEM sensors.
+	
 2011-09-16  Albert Chu <chu11@llnl.gov>
 
 	* ipmipower/ipmipower.conf.5.pre.in,
